src/components/shopPage/shopPage.scss
@import '../../basic.scss';

@font-face {
  font-family: "Exo 2";
  src: url(../../font/Exo2.0-Thin.otf);
  font-style: normal;
  font-weight: 100;
}

.shop-page {
  @include flex-col();
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  margin: auto;
  padding: 0px 10px;
}

.title {
  @include flex-row();
  justify-content: center;
  align-items: center;
  padding: 20px 0px;
}

.title__text {
  font: 1.2em "Exo 2", Helvetica, sans-serif;
  color: #FFFFFF;
}

.cards {
  @include flex-row();
  justify-content: space-around;
  flex-wrap: wrap;
  margin-right: -20px;
}

.cards li {
  @include flex-col();
  align-items: center;
  flex: 1 1 auto;
  min-height: 380px;
  margin-bottom: 30px;
  margin-right: 20px;
}

@media screen and (min-width: 1100px) {
  .title__text {
    font-size: 2.5em;
  }

  .cards {
    margin-right: -50px;
  }

  .cards li {
    margin-right: 50px;
    min-height: 450px;
  }
}

